--- a/public/index.html
+++ b/public/index.html
@@ -11,16 +11,16 @@
     <script>
         var socket = io();
         socket.on('connect',function(){
-            console.log('Conectado al servidor');
+            console.log('Conectting to Server');
         });
         socket.on('disconnect',function(){
-            console.log('Desonectado al servidor');
+            console.log('Disconnecting from Server');
         });
 
         //emitir evento
         socket.emit('message',{name:'RODRIGO'});
         socket.on('supermessage',function(payload){
-            console.log('Respuesta de mensaje emitido:','HOLA '+payload['admin']);
+            console.log('Answer from Emitted Message:','HELLO '+payload['admin']);
         });
     </script>
 </body>
